Fix z-index for spinner

--- a/src/blocks/menu/menu-item/styles/editor.scss
+++ b/src/blocks/menu/menu-item/styles/editor.scss
@@ -34,6 +34,10 @@
 		}
 	}
 
+	.components-spinner {
+		z-index: 9;
+	}
+
 	&__heading.block-editor-rich-text__editable {
 		margin: 0 0 0.4em;
 	}
